docs/5.x/securityhub_account.md
---
permalink: /securityhub_account/
---

# securityhub_account

`securityhub_account` represents the `aws_securityhub_account` Terraform resource.



This package contains functions and utilities for setting up the resource using Jsonnet code.


## Index

* [`fn new()`](#fn-new)
* [`fn newAttrs()`](#fn-newattrs)
* [`fn withAutoEnableControls()`](#fn-withautoenablecontrols)
* [`fn withControlFindingGenerator()`](#fn-withcontrolfindinggenerator)
* [`fn withEnableDefaultStandards()`](#fn-withenabledefaultstandards)

## Fields

### fn new

```ts
new()
```


`aws.securityhub_account.new` injects a new `aws_securityhub_account` Terraform `resource`
block into the root module document.

Additionally, this inserts a private function into the `_ref` attribute that generates references to attributes of the
resource. For example, if you added a new instance to the root using:

    # arguments omitted for brevity
    aws.securityhub_account.new('some_id')

You can get the reference to the `id` field of the created `aws.securityhub_account` using the reference:

    $._ref.aws_securityhub_account.some_id.get('id')

This is the same as directly entering `"${ aws_securityhub_account.some_id.id }"` as the value.

NOTE: if you are chaining multiple resources together in a merge operation, you may not be able to use `super`, `self`,
or `$` to refer to the root object. Instead, make an explicit outer object using `local`.

**Args**:
  - `resourceLabel` (`string`): The name label of the block.
  - `auto_enable_controls` (`bool`): Set the `auto_enable_controls` field on the resulting resource block. When `null`, the `auto_enable_controls` field will be omitted from the resulting object.
  - `control_finding_generator` (`string`): Set the `control_finding_generator` field on the resulting resource block. When `null`, the `control_finding_generator` field will be omitted from the resulting object.
  - `enable_default_standards` (`bool`): Set the `enable_default_standards` field on the resulting resource block. When `null`, the `enable_default_standards` field will be omitted from the resulting object.

**Returns**:
- A mixin object that injects the new resource into the root Terraform configuration.


### fn newAttrs

```ts
newAttrs()
```


`aws.securityhub_account.newAttrs` constructs a new object with attributes and blocks configured for the `securityhub_account`
Terraform resource.

Unlike [aws.securityhub_account.new](#fn-new), this function will not inject the `resource`
block into the root Terraform document. Instead, this must be passed in as the `attrs` argument for the
[tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) function to build a complete block.

This is most useful when you need to preprocess the attributes with functions, conditional, or looping logic prior to
injecting into a complete block.

**Args**:
  - `auto_enable_controls` (`bool`): Set the `auto_enable_controls` field on the resulting object. When `null`, the `auto_enable_controls` field will be omitted from the resulting object.
  - `control_finding_generator` (`string`): Set the `control_finding_generator` field on the resulting object. When `null`, the `control_finding_generator` field will be omitted from the resulting object.
  - `enable_default_standards` (`bool`): Set the `enable_default_standards` field on the resulting object. When `null`, the `enable_default_standards` field will be omitted from the resulting object.

**Returns**:
  - An attribute object that can be used with [tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) to construct a new `securityhub_account` resource into the root Terraform configuration.


### fn withAutoEnableControls

```ts
withAutoEnableControls()
```

`aws.bool.withAutoEnableControls` constructs a mixin object that can be merged into the `bool`
Terraform resource block to set or update the auto_enable_controls field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`bool`): The value to set for the `auto_enable_controls` field.


### fn withControlFindingGenerator

```ts
withControlFindingGenerator()
```

`aws.string.withControlFindingGenerator` constructs a mixin object that can be merged into the `string`
Terraform resource block to set or update the control_finding_generator field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`string`): The value to set for the `control_finding_generator` field.


### fn withEnableDefaultStandards

```ts
withEnableDefaultStandards()
```

`aws.bool.withEnableDefaultStandards` constructs a mixin object that can be merged into the `bool`
Terraform resource block to set or update the enable_default_standards field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`bool`): The value to set for the `enable_default_standards` field.
